# vcpkg-ports

./: vcpkg_from_gitee.cmake
abseil/: portfile.cmake
alog/: CONTROL  portfile.cmake
coost/: portfile.cmake
cppkafka/: fix-msvc.patch  portfile.cmake  vcpkg.json
cpprestsdk/: portfile.cmake
ctemplate/: CMakeLists.txt  CONTROL  portfile.cmake
data-process-core/: CONTROL  portfile.cmake
drogon/: CONTROL  portfile.cmake  vcpkg.patch
ffmpeg/: vcpkg.json
gflags/: portfile.cmake
hiredis/: portfile.cmake
libmysql/: CONTROL  portfile.cmake  system-libs.patch
libodb/: portfile.cmake
libodb-mysql/: portfile.cmake
libodb-sqlite/: portfile.cmake
logger/: CONTROL  portfile.cmake
mongo-cxx-driver/: portfile.cmake  vcpkg.json
mysql-connector-cpp/: CONTROL  portfile.cmake
prometheus-cpp/: CONTROL  portfile.cmake
protobuf/: portfile.cmake  vcpkg.json
pugixml/: portfile.cmake
pybind11/: CONTROL  portfile.cmake
python38/: CONTROL  portfile.cmake
spdlog/: portfile.cmake
thrift/: portfile.cmake  vcpkg.json
utilities/: CONTROL  portfile.cmake
workflow/: portfile.cmake
zlib/: portfile.cmake
